--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,55 +1,56 @@
+/* Set box-sizing to border-box for all elements to include padding and border in the element's total width and height */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
+/* Set the background color of the body to a light gray */
 body {
     background-color: #d9dcd6;
 }
-
-.header {
+/* Styling for the header element */
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
-
-.header div {
+/* Styling for the navigation menu */
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
-.header div ul {
+/* Styling for the unordered list within the navigation menu */
+header nav ul {
     list-style-type: none;
 }
-
-.header div ul li {
+/* Styling for each list item within the navigation menu */
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
-
+/* Styling for anchor links */
 a {
     color: #ffffff;
     text-decoration: none;
 }
-
+/* Styling for paragraphs */
 p {
     font-size: 16px;
 }
-
+/* Styling for the hero section with a background image */
 .hero {
     height: 800px;
     width: 100%;
@@ -58,23 +59,23 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/* Float the image to the left */
 .float-left {
     float: left;
     margin-right: 25px;
 }
-
+/* Float the image to the right */
 .float-right {
     float: right;
     margin-left: 25px;
 }
-
+/* Styling for the content section */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-
+/* Styling for the benefits section */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -85,7 +86,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* Styling for individual benefit sections */
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
@@ -115,7 +116,7 @@ p {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/* Styling for the images within the benefit sections */
 .benefit-lead img {
     display: block;
     margin: 10px auto;
@@ -133,7 +134,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* Styling for the search-engine-optimization section */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -160,7 +161,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/* Styling for the images within the search-engine-optimization section */
 .search-engine-optimization img {
     max-height: 200px;
 }
@@ -187,14 +188,14 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-.footer {
+/* Styling for the footer section */
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-
-.footer h2 {
+/* Styling for the h2 element within the footer */
+footer h3 {
     font-size: 20px;
 }
