--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ header {
     background-color: #2a607c;
     color: #ffffff;
 }
-
+/* Styling for the header h1 element */
 header h1 {
     display: inline-block;
     font-size: 48px;
@@ -93,7 +93,7 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
+/* Styling h3 for  benefit sections */
 .benefit-lead h3,
 .benefit-brand h3,
 .benefit-cost h3 {
@@ -129,8 +129,8 @@ online-reputation-management, social-media-marketing in one */
 .social-media-marketing img {
     max-height: 200px;
 }
-
-
+/* Styling for the h2 within the search-engine-optimization,
+online-reputation-management, social-media-marketing in one */
 .search-engine-optimization h2,
 .online-reputation-management h2,
 .social-media-marketing h2 {
@@ -145,7 +145,7 @@ footer {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-/* Styling for the h2 element within the footer */
+/* Styling for the h3 element within the footer */
 footer h3 {
     font-size: 20px;
 }
